// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchInputMobile should match snapshot 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 44px;
  max-width: 100%;
  min-width: 320px;
  border: 1px solid #999999;
  border-radius: 2px;
  background-color: rgba(255,255,255,1);
  visibility: visible;
}

.c0 > * {
  visibility: visible;
}

.c0.search--container-icon-only {
  visibility: hidden;
}

.c0.search--container-icon-only > * {
  visibility: hidden;
}

.c0.search--container-icon-only.search--container-focused,
.c0.search--container-icon-only.search--container-has-value {
  visibility: visible;
}

.c0.search--container-icon-only.search--container-focused > *,
.c0.search--container-icon-only.search--container-has-value > * {
  visibility: visible;
}

.c1 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #999999;
  padding: 0;
  border: none;
  background: transparent;
  outline: none;
}

.search--container .c1 {
  visibility: visible;
}

.c3 {
  font-size: 16px;
  height: 100%;
  color: #262626;
  padding: 0;
  border: none;
  background: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c3::-webkit-input-placeholder {
  color: rgba(38,38,38,0.4);
}

.c3::-moz-placeholder {
  color: rgba(38,38,38,0.4);
}

.c3:-ms-input-placeholder {
  color: rgba(38,38,38,0.4);
}

.c3::placeholder {
  color: rgba(38,38,38,0.4);
}

.c3::-ms-clear {
  display: none;
}

.c3:focus {
  outline: none;
}

.c2 {
  margin: 0 16px;
}

.c5 {
  border: none;
  background: transparent;
  outline: none;
  display: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
  color: #026cdf;
  padding: 0 16px 0 0;
  height: 100%;
}

.c4 {
  background: transparent;
  outline: none;
  border: none;
  padding: 0;
  height: 100%;
  width: 44px;
  margin-left: 8px;
  display: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: #999999;
}

.c4 svg {
  margin-left: 0;
}

@media screen and (min-width:768px) {
  .c5 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c4 {
    width: 40px;
    -webkit-box-pack: left;
    -webkit-justify-content: left;
    -ms-flex-pack: left;
    justify-content: left;
  }
}

<div
  className="search--container c0"
  onClick={[Function]}
>
  <button
    aria-label="Search button"
    className="search--search-icon c1"
    onClick={[Function]}
    type="button"
  >
    <svg
      className="c2"
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M24 0H0v24h24z"
        />
        <path
          d="M18 9.5a8.5 8.5 0 1 0-17 0 8.5 8.5 0 0 0 17 0zm-1.438 6.355l7.292 7.291a.5.5 0 0 1-.708.708l-7.291-7.292a9.5 9.5 0 1 1 .707-.707z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </button>
  <input
    aria-label="Search input"
    autoComplete="off"
    className="search--input c3"
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Search Demo"
    type="search"
    value=""
  />
  <button
    aria-label="Clear button"
    className="search--clear-icon c4"
    onClick={[Function]}
    type="button"
    value=""
  >
    <svg
      height="24"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        fill="none"
        fillRule="evenodd"
      >
        <path
          d="M0 0h24v24H0z"
        />
        <path
          d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0 1C5.925 23 1 18.075 1 12S5.925 1 12 1s11 4.925 11 11-4.925 11-11 11zm3.89-15.596a.5.5 0 0 1 .706.707l-8.485 8.485a.5.5 0 0 1-.707-.707l8.485-8.485zm-8.486.707a.5.5 0 0 1 .707-.707l8.485 8.485a.5.5 0 0 1-.707.707L7.404 8.111z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </g>
    </svg>
  </button>
  <button
    aria-label="Cancel button"
    className="search--cancel-icon c5"
    onClick={[Function]}
    type="button"
  >
    Cancel
  </button>
</div>
`;

exports[`SearchInputMobile should match snapshot when mobile opened 1`] = `
.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  box-sizing: border-box;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  height: 44px;
  max-width: 100%;
  min-width: 320px;
  border: 1px solid #999999;
  border-radius: 2px;
  background-color: rgba(255,255,255,1);
  visibility: visible;
}

.c1 > * {
  visibility: visible;
}

.c1.search--container-icon-only {
  visibility: hidden;
}

.c1.search--container-icon-only > * {
  visibility: hidden;
}

.c1.search--container-icon-only.search--container-focused,
.c1.search--container-icon-only.search--container-has-value {
  visibility: visible;
}

.c1.search--container-icon-only.search--container-focused > *,
.c1.search--container-icon-only.search--container-has-value > * {
  visibility: visible;
}

.c2 {
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: #999999;
  padding: 0;
  border: none;
  background: transparent;
  outline: none;
}

.search--container .c2 {
  visibility: visible;
}

.c4 {
  font-size: 16px;
  height: 100%;
  color: #262626;
  padding: 0;
  border: none;
  background: none;
  -webkit-box-flex: 1;
  -webkit-flex-grow: 1;
  -ms-flex-positive: 1;
  flex-grow: 1;
}

.c4::-webkit-input-placeholder {
  color: rgba(38,38,38,0.4);
}

.c4::-moz-placeholder {
  color: rgba(38,38,38,0.4);
}

.c4:-ms-input-placeholder {
  color: rgba(38,38,38,0.4);
}

.c4::placeholder {
  color: rgba(38,38,38,0.4);
}

.c4::-ms-clear {
  display: none;
}

.c4:focus {
  outline: none;
}

.c3 {
  margin: 0 16px;
}

.c6 {
  border: none;
  background: transparent;
  outline: none;
  display: none;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  margin-left: 8px;
  color: #026cdf;
  padding: 0 16px 0 0;
  height: 100%;
}

.c5 {
  background: transparent;
  outline: none;
  border: none;
  padding: 0;
  height: 100%;
  width: 44px;
  margin-left: 8px;
  display: none;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  cursor: pointer;
  color: #999999;
}

.c5 svg {
  margin-left: 0;
}

.c0 {
  position: fixed;
  z-index: 4;
  top: 0;
  width: 100%;
  left: 0;
}

.c0 .search--container {
  padding-left: 16px;
  border-radius: 0;
  border-top: transparent;
  border-left: transparent;
  border-right: transparent;
}

.c0 .search--search-icon {
  display: none;
}

@media screen and (min-width:768px) {
  .c6 {
    display: none;
  }
}

@media screen and (min-width:768px) {
  .c5 {
    width: 40px;
    -webkit-box-pack: left;
    -webkit-justify-content: left;
    -ms-flex-pack: left;
    justify-content: left;
  }
}

<div
  className="c0"
>
  <div
    className="search--container c1"
    onClick={[Function]}
  >
    <button
      aria-label="Search button"
      className="search--search-icon c2"
      onClick={[Function]}
      type="button"
    >
      <svg
        className="c3"
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M24 0H0v24h24z"
          />
          <path
            d="M18 9.5a8.5 8.5 0 1 0-17 0 8.5 8.5 0 0 0 17 0zm-1.438 6.355l7.292 7.291a.5.5 0 0 1-.708.708l-7.291-7.292a9.5 9.5 0 1 1 .707-.707z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </button>
    <input
      aria-label="Search input"
      autoComplete="off"
      className="search--input c4"
      onChange={[Function]}
      onFocus={[Function]}
      placeholder="Search Demo"
      type="search"
      value=""
    />
    <button
      aria-label="Clear button"
      className="search--clear-icon c5"
      onClick={[Function]}
      type="button"
      value=""
    >
      <svg
        height="24"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g
          fill="none"
          fillRule="evenodd"
        >
          <path
            d="M0 0h24v24H0z"
          />
          <path
            d="M12 22c5.523 0 10-4.477 10-10S17.523 2 12 2 2 6.477 2 12s4.477 10 10 10zm0 1C5.925 23 1 18.075 1 12S5.925 1 12 1s11 4.925 11 11-4.925 11-11 11zm3.89-15.596a.5.5 0 0 1 .706.707l-8.485 8.485a.5.5 0 0 1-.707-.707l8.485-8.485zm-8.486.707a.5.5 0 0 1 .707-.707l8.485 8.485a.5.5 0 0 1-.707.707L7.404 8.111z"
            fill="currentColor"
            fillRule="nonzero"
          />
        </g>
      </svg>
    </button>
    <button
      aria-label="Cancel button"
      className="search--cancel-icon c6"
      onClick={[Function]}
      type="button"
    >
      Cancel
    </button>
  </div>
</div>
`;
